--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
     "validator": "^8.1.0"
   },
   "scripts": {
-    "start": "react-scripts start",
+    "start": "REACT_APP_STAGE=dev react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject",
