--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "lint": "eslint src"
   },
   "devDependencies": {
+    "babel-core": "^6.26.3",
     "eslint": "^4.5.0",
     "eslint-config-airbnb": "^15.0.1",
     "eslint-config-prettier": "^2.3.0",
